tests/errors/nomut_reassign.ptt
spark {
  nomut x is 10
  x be 20
}
